# Native-Graph-Storage

./: .gitignore  CMakeLists.txt  README.md  cppTesting.cpp  store.cpp
lib/: NodeBlock.cpp  NodeBlock.h  NodeManager.cpp  NodeManager.h  PropertyLink.cpp  PropertyLink.h  RelationBlock.cpp  RelationBlock.h
lib/internal/: NodeManager.cpp  PropertyLink.cpp
streamStore/: edges.db  nodes.db
testing/: b.b  storeTesting.cpp  store_worker.cpp
testing/utils/: loader.cpp
